--- a/src/main/resources/com/example/hotelbookingsystemnea/EmployeeLogin.fxml
+++ b/src/main/resources/com/example/hotelbookingsystemnea/EmployeeLogin.fxml
@@ -38,5 +38,6 @@
       <TextField layoutX="370.0" layoutY="219.0" prefHeight="25.0" prefWidth="179.0" />
       <TextField layoutX="370.0" layoutY="285.0" prefHeight="25.0" prefWidth="179.0" />
       <Button layoutX="305.0" layoutY="357.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="91.0" text="L O G I N" textFill="#2832c7" />
+      <Button fx:id="AdminReturnBtn" layoutX="8.0" layoutY="406.0" mnemonicParsing="false" onAction="#returnToStartPage" text="Return" />
    </children>
 </AnchorPane>
