--- a/src/main/resources/com/example/hotelbookingsystemnea/AdminHomePage.fxml
+++ b/src/main/resources/com/example/hotelbookingsystemnea/AdminHomePage.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="503.0" prefWidth="741.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.hotelbookingsystemnea.AdminHomePage">
+<AnchorPane prefHeight="503.0" prefWidth="741.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.hotelbookingsystemnea.HelloController">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#70b5f5" height="64.0" stroke="BLACK" strokeType="INSIDE" width="741.0" />
       <Label layoutX="246.0" prefHeight="75.0" prefWidth="293.0" text="Admin Menu">
@@ -22,5 +22,6 @@
       <Button layoutX="153.0" layoutY="227.0" mnemonicParsing="false" prefHeight="21.0" prefWidth="198.0" text="Search for Customer " textFill="#3b47f5" />
       <Button layoutX="154.0" layoutY="333.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="204.0" text="Book restaurant " textFill="#4d57e1" />
       <Button layoutX="154.0" layoutY="283.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="204.0" text="Edit bookings " textFill="#573bf8" />
+      <Button fx:id="AdminReturn" layoutX="4.0" layoutY="2.0" mnemonicParsing="false" onAction="#adminReturnBtn" prefHeight="25.0" prefWidth="89.0" text="Return" />
    </children>
 </AnchorPane>
