--- a/src/main/resources/com/example/hotelbookingsystemnea/EmployeeLogin.fxml
+++ b/src/main/resources/com/example/hotelbookingsystemnea/EmployeeLogin.fxml
@@ -38,6 +38,6 @@
       <TextField layoutX="370.0" layoutY="219.0" prefHeight="25.0" prefWidth="179.0" />
       <TextField layoutX="370.0" layoutY="285.0" prefHeight="25.0" prefWidth="179.0" />
       <Button layoutX="305.0" layoutY="357.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="91.0" text="L O G I N" textFill="#2832c7" />
-      <Button fx:id="AdminReturnBtn" layoutX="6.0" layoutY="7.0" mnemonicParsing="false" onAction="#returnToStartPage" prefHeight="25.0" prefWidth="91.0" text="Return" textFill="#141414" />
+      <Button fx:id="AdminReturnBtn" layoutY="2.0" mnemonicParsing="false" onAction="#returnToStartPage" prefHeight="25.0" prefWidth="91.0" text="Return" textFill="#141414" />
    </children>
 </AnchorPane>
