--- a/src/main/resources/com/example/hotelbookingsystemnea/RegistrationPage.fxml
+++ b/src/main/resources/com/example/hotelbookingsystemnea/RegistrationPage.fxml
@@ -1,17 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.paint.*?>
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="552.0" prefWidth="713.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.hotelbookingsystemnea.HelloController">
+<AnchorPane prefHeight="552.0" prefWidth="713.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.hotelbookingsystemnea.HelloController">
    <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="552.0" stroke="BLACK" strokeType="INSIDE" width="196.0" />
-      <Label layoutX="6.0" layoutY="8.0" prefHeight="93.0" prefWidth="196.0" text="Register " textFill="#fdfdfd">
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#9dc6eb" height="562.0" stroke="BLACK" strokeType="INSIDE" width="196.0" />
+      <Label layoutX="6.0" layoutY="10.0" prefHeight="93.0" prefWidth="196.0" text="Register ">
          <font>
             <Font size="49.0" />
          </font>
+         <textFill>
+            <RadialGradient centerX="0.5333333333333333" centerY="0.5" radius="0.5">
+               <stops>
+                  <Stop>
+                     <color>
+                        <Color red="0.9473684430122375" green="0.9385964870452881" blue="0.9385964870452881" />
+                     </color>
+                  </Stop>
+                  <Stop offset="1.0">
+                     <color>
+                        <Color red="1.0" green="1.0" blue="1.0" />
+                     </color>
+                  </Stop>
+               </stops>
+            </RadialGradient>
+         </textFill>
       </Label>
       <TextField layoutX="246.0" layoutY="55.0" />
       <TextField layoutX="466.0" layoutY="55.0" />
@@ -50,6 +68,10 @@
             <Font size="23.0" />
          </font>
       </Label>
+      <ImageView fx:id="imageview" fitHeight="290.0" fitWidth="170.0" layoutX="13.0" layoutY="139.0" pickOnBounds="true" preserveRatio="true">
+              <image>
+              <Image url="@defaultprofilepic.jpg" />
+              </image></ImageView>
       <TextField layoutX="230.0" layoutY="264.0" prefHeight="40.0" prefWidth="452.0" />
       <Label layoutX="232.0" layoutY="339.0" text="Password ">
          <font>
@@ -62,5 +84,7 @@
             <Font size="16.0" />
          </font>
       </Button>
+      <Button fx:id="registerReturnBtn" layoutX="628.0" layoutY="10.0" mnemonicParsing="false" onAction="#registrationReturnBtn" prefHeight="25.0" prefWidth="71.0" text="Return" />
+
    </children>
 </AnchorPane>
