--- a/src/main/resources/com/example/hotelbookingsystemnea/EmployeeLogin.fxml
+++ b/src/main/resources/com/example/hotelbookingsystemnea/EmployeeLogin.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="439.0" prefWidth="704.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.hotelbookingsystemnea.HelloController">
+<AnchorPane prefHeight="439.0" prefWidth="704.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Customer.CustomerLoginAndRegistrationController">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#47ade1" height="64.0" stroke="BLACK" strokeType="INSIDE" width="704.0" />
       <Label layoutX="245.0" layoutY="14.0" prefHeight="46.0" prefWidth="197.0" text=" Admin Login ">
