--- a/src/main/resources/com/example/hotelbookingsystemnea/RegistrationPage.fxml
+++ b/src/main/resources/com/example/hotelbookingsystemnea/RegistrationPage.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="552.0" prefWidth="713.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.hotelbookingsystemnea.HelloController">
+<AnchorPane prefHeight="552.0" prefWidth="713.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Customer.CustomerLoginAndRegistrationController">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#9dc6eb" height="562.0" stroke="BLACK" strokeType="INSIDE" width="196.0" />
       <Label layoutX="6.0" layoutY="10.0" prefHeight="93.0" prefWidth="196.0" text="Register ">
@@ -31,13 +31,13 @@
             </RadialGradient>
          </textFill>
       </Label>
-      <TextField layoutX="246.0" layoutY="55.0" />
-      <TextField layoutX="466.0" layoutY="55.0" />
+      <TextField fx:id="FirstName" layoutX="246.0" layoutY="55.0" />
+      <TextField fx:id="SurnameTextField" layoutX="466.0" layoutY="55.0" />
       <Label layoutX="246.0" layoutY="22.0" prefHeight="33.0" prefWidth="116.0" text="First Name">
          <font>
             <Font size="23.0" />
          </font></Label>
-      <Label layoutX="466.0" layoutY="22.0" prefHeight="33.0" prefWidth="116.0" text="Last Name ">
+      <Label layoutX="466.0" layoutY="22.0" prefHeight="33.0" prefWidth="116.0" text="Surname ">
          <font>
             <Font size="23.0" />
          </font></Label>
@@ -46,23 +46,7 @@
             <Font size="23.0" />
          </font>
       </Label>
-      <Label layoutX="246.0" layoutY="126.0" prefHeight="40.0" prefWidth="86.0" text="Date ">
-         <font>
-            <Font size="19.0" />
-         </font></Label>
-      <TextField layoutX="224.0" layoutY="166.0" prefHeight="26.0" prefWidth="104.0" />
-      <Label layoutX="371.0" layoutY="134.0" text="Month ">
-         <font>
-            <Font size="19.0" />
-         </font>
-      </Label>
-      <TextField layoutX="347.0" layoutY="166.0" />
-      <Label layoutX="541.0" layoutY="129.0" text="Year ">
-         <font>
-            <Font size="23.0" />
-         </font>
-      </Label>
-      <TextField layoutX="518.0" layoutY="166.0" />
+      <TextField fx:id="DateOfBirth" layoutX="276.0" layoutY="139.0" prefHeight="25.0" prefWidth="360.0" />
       <Label layoutX="246.0" layoutY="224.0" text="Email">
          <font>
             <Font size="23.0" />
@@ -72,19 +56,22 @@
               <image>
               <Image url="@defaultprofilepic.jpg" />
               </image></ImageView>
-      <TextField layoutX="230.0" layoutY="264.0" prefHeight="40.0" prefWidth="452.0" />
+      <TextField fx:id="RegEmail" layoutX="230.0" layoutY="264.0" prefHeight="40.0" prefWidth="452.0" />
       <Label layoutX="232.0" layoutY="339.0" text="Password ">
          <font>
             <Font size="23.0" />
          </font>
       </Label>
-      <TextField layoutX="230.0" layoutY="383.0" prefHeight="40.0" prefWidth="452.0" />
+      <TextField fx:id="RegPassword" layoutX="230.0" layoutY="383.0" prefHeight="40.0" prefWidth="452.0" />
       <Button layoutX="392.0" layoutY="471.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="104.0" text="Register " textFill="#0f1cd0">
          <font>
             <Font size="16.0" />
          </font>
       </Button>
       <Button fx:id="registerReturnBtn" layoutX="628.0" layoutY="10.0" mnemonicParsing="false" onAction="#registrationReturnBtn" prefHeight="25.0" prefWidth="71.0" text="Return" />
+      <Label layoutX="395.0" layoutY="95.0" prefHeight="17.0" prefWidth="103.0" text="(MM/DD/YYYY)" />
+      <Label fx:id="RegError" layoutX="317.0" layoutY="173.0" prefHeight="17.0" prefWidth="156.0" />
+      <Label fx:id="RegSuccessful" layoutX="319.0" layoutY="207.0" prefHeight="17.0" prefWidth="149.0" />
 
    </children>
 </AnchorPane>
