--- a/src/main/resources/com/example/hotelbookingsystemnea/EmployeeRegisterPage.fxml
+++ b/src/main/resources/com/example/hotelbookingsystemnea/EmployeeRegisterPage.fxml
@@ -5,10 +5,10 @@
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="439.0" prefWidth="704.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Customer.CustomerLoginAndRegistrationController">
+<AnchorPane prefHeight="439.0" prefWidth="704.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Customer.CustomerLoginAndRegistrationController">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#47ade1" height="64.0" stroke="BLACK" strokeType="INSIDE" width="704.0" />
-      <Label layoutX="245.0" layoutY="14.0" prefHeight="46.0" prefWidth="197.0" text=" Admin Login ">
+      <Label layoutX="245.0" layoutY="14.0" prefHeight="46.0" prefWidth="237.0" text=" Admin Register  ">
          <font>
             <Font size="31.0" />
          </font>
@@ -37,7 +37,7 @@
          </font></Label>
       <TextField layoutX="370.0" layoutY="219.0" prefHeight="25.0" prefWidth="179.0" />
       <TextField layoutX="370.0" layoutY="285.0" prefHeight="25.0" prefWidth="179.0" />
-      <Button layoutX="305.0" layoutY="357.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="91.0" text="L O G I N" textFill="#2832c7" />
+      <Button layoutX="305.0" layoutY="357.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="108.0" text="R E G I S T E R " textFill="#2832c7" />
       <Button fx:id="AdminReturnBtn" layoutY="2.0" mnemonicParsing="false" onAction="#returnToStartPage" prefHeight="25.0" prefWidth="91.0" text="Return" textFill="#141414" />
    </children>
 </AnchorPane>
