--- a/src/main/resources/com/example/hotelbookingsystemnea/RegistrationPage.fxml
+++ b/src/main/resources/com/example/hotelbookingsystemnea/RegistrationPage.fxml
@@ -32,7 +32,7 @@
          </textFill>
       </Label>
       <TextField fx:id="FirstName" layoutX="246.0" layoutY="55.0" />
-      <TextField fx:id="SurnameTextField" layoutX="466.0" layoutY="55.0" />
+      <TextField fx:id="Surname" layoutX="466.0" layoutY="55.0" />
       <Label layoutX="246.0" layoutY="22.0" prefHeight="33.0" prefWidth="116.0" text="First Name">
          <font>
             <Font size="23.0" />
